Project nav: bg art overflow fix

--- a/src/styles/layout/layout.styl
+++ b/src/styles/layout/layout.styl
@@ -1,6 +1,6 @@
 html
 body
-	overflow-x: hidden
+	overflow-x: clip
 
 html
 	box-sizing: border-box
